Adding new placeholder text

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
           </head>
           <body>
             <div align="center">
-                <h1>YOUR NAME HERE</h1>
+                <h1>Jacob C. Lara</h1>
                 <h2>Software Developer</h2>
                 <hr>
                 <h3>About Me:</h3>
@@ -15,7 +15,9 @@
                     <h4>My favorite color is Red.</h4>
                     <h4>My favorite food is Shepards Pie.</h4>
                     <h4>If I could be any animal, I would be a animal I'd be a bear.</h4>
-                    <p>Meow! Meow! Meow!</p>
+                    <p>That is all for my ted talk thank you all for for time</p>
             </div>
           </body>
         </html>
+
+			
