--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                     <h4>My favorite color is Red.</h4>
                     <h4>My favorite food is Shepards Pie.</h4>
                     <h4>If I could be any animal, I would be a bear.</h4>
-                    <p>That is all for my ted talk thank you all for for time</p>
+                    <p>That is all for my ted talk thank you all for for time!</p>
             </div>
           </body>
         </html>
